--- a/my-app/src/App.css
+++ b/my-app/src/App.css
@@ -13,6 +13,19 @@
   }
 }
 
+@keyframes fadeIn {
+  from {
+    opacity: 0.8;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+.animate-fadeInPage {
+  animation: fadeIn 1s ease-in-out;
+}
+
 .App-header {
   background-color: #282c34;
   min-height: 100vh;
